[fix] 채팅 응답 형식 수정 - 채팅 목록 조회 응답 수정 - 채팅 메시지 조회 응답 수정